<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/colorGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/tip_textView_laundry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_Laundry"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_laundry"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/tip_textview_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_food"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_foodr"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/tip_textview_daiso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_Daiso"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_daiso"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/tip_textView_trash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_trash"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_trash"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/tip_textview_room_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_room_clean"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_room_clean"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/tip_textview_bathroom_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_bathroom_clean"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_bathroom_clean"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/tip_textview_toilet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_toilet"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tip_RecyclerView_toilet"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
    </LinearLayout>
</ScrollView>

