<?xml version="1.0" encoding="utf-8"?>
<!--세로 스크롤 적용-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/colorGray">
    <!--    스크롤뷰에는 뷰나 레이아웃을 하나 적용가능하므로 LinearLayout 사용-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--        1번 내용    Viewpager: scrollview랑 다르게 단계별로 넘기기 가능-->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_ViewPager_tip"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>
        <!--        2번 내용-->
        <TextView
            android:id="@+id/main_textView_rcp_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Main_rcp_first_txt"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_ViewPager_rcp"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="10dp"/>
        <!--        3번 내용-->
        <TextView
            android:id="@+id/main_textView_tip_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Main_tip_second_txt"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"/>
        <!--        간단하게 직접 구성했지만 후에 Adapter 설정해야할 것으로 보임-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_RecyclerView_tip"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none"/>
        <TextView
            android:id="@+id/main_textView_rcp_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Main_rcp_third_txt"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_ViewPager_rcp_second"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>